--- a/package.json
+++ b/package.json
@@ -57,11 +57,15 @@
     "@dcloudio/uni-quickapp-native": "^2.0.0-31920210709003",
     "@dcloudio/uni-quickapp-webview": "^2.0.0-31920210709003",
     "@dcloudio/uni-stat": "^2.0.0-31920210709003",
+    "@dcloudio/uni-ui": "^1.3.9",
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "@vue/shared": "^3.0.0",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "flyio": "^0.6.2",
     "regenerator-runtime": "^0.12.1",
     "vue": "^2.6.11",
+    "vue-axios": "^3.2.5",
     "vue-class-component": "^6.3.2",
     "vue-property-decorator": "^8.0.0",
     "vuex": "^3.2.0"
@@ -87,7 +91,10 @@
     "jest": "^25.4.0",
     "mini-types": "*",
     "miniprogram-api-typings": "*",
+    "node-sass": "^6.0.1",
     "postcss-comment": "^2.0.0",
+    "sass": "~1.36",
+    "sass-loader": "^10.1.1",
     "typescript": "^3.0.0",
     "vue-template-compiler": "^2.6.11"
   },
