--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.4",
     "core-js": "^3.6.5",
-    "gsap": "^3.7.1",
     "soundfont-player": "^0.12.0",
     "vue": "^2.6.11",
+    "vue-axios": "^3.3.6",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0"
   },
