--- a/package.json
+++ b/package.json
@@ -1,15 +1,11 @@
 {
-	"name": "qc_app_main",
+	"name": "lightwindow_main",
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
 		"serve": "vue-cli-service serve",
 		"build": "vue-cli-service build",
-		"lint": "vue-cli-service lint",
-		"dev": "vite",
-		"start": "vite",
-		"preview": "vite preview",
-		"vite-build": "vite build"
+		"lint": "vue-cli-service lint"
 	},
 	"dependencies": {
 		"axios": "^0.21.4",
@@ -35,8 +31,6 @@
 		"sass": "~1.32.0",
 		"sass-loader": "^10.0.0",
 		"typescript": "~4.1.5",
-		"vite": "2",
-		"vite-plugin-vue2": "latest",
 		"vue-cli-plugin-vuetify": "~2.4.2",
 		"vue-template-compiler": "^2.6.11",
 		"vuetify-loader": "^1.7.0"
