--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	"dependencies": {
 		"axios": "^0.21.4",
 		"core-js": "^3.6.5",
+		"prerender-spa-plugin": "^3.4.0",
 		"soundfont-player": "^0.12.0",
 		"vue": "^2.6.11",
 		"vue-axios": "^3.3.6",
