--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "version": "1.0.0",
   "license": "Apache-2.0",
   "scripts": {
-    "preinstall": "node scripts/preinstall.js",
+    "install-all": "pnpm i && cd packages/lightwindow_calendar && yarn && cd ../presentation && pnpm i ",
     "build": "node scripts/build.js && node scripts/postBuild.js",
+    "preview": "vite preview",
     "serve:main": "cd packages/lightwindow_main && pnpm run serve",
     "serve:calendar": "cd packages/lightwindow_calendar && pnpm run serve",
     "build:main": "cd packages/lightwindow_main && pnpm run build",
@@ -28,6 +29,7 @@
     "babel-core": "^6.26.3",
     "chalk": "^4.1.2",
     "jest": "^27.3.1",
+    "serve-static": "^1.14.1",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
     "tslib": "^2.3.1",
