--- a/packages/lightwindow_calendar/package.json
+++ b/packages/lightwindow_calendar/package.json
@@ -59,10 +59,11 @@
     "@dcloudio/uni-stat": "^2.0.0-32920210927002",
     "@dcloudio/uni-ui": "1.3.9",
     "@mdi/js": "^6.2.95",
-    "@types/jest": "^27.0.2",
+    "@types/jest": "^27.0.3",
     "@vue/shared": "^3.0.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "cryptico": "^1.0.2",
     "flyio": "^0.6.2",
     "regenerator-runtime": "^0.12.1",
     "vue": "^2.6.11",
@@ -90,13 +91,15 @@
     "@vue/cli-service": "~4.5.0",
     "babel-plugin-import": "^1.11.0",
     "cross-env": "^7.0.2",
-    "jest": "^25.4.0",
+    "jest": "^27.3.1",
     "mini-types": "*",
     "miniprogram-api-typings": "*",
     "node-sass": "^6.0.1",
     "postcss-comment": "^2.0.0",
     "sass": "~1.36",
     "sass-loader": "^10.1.1",
+    "ts-jest": "^27.0.7",
+    "ts-node": "^10.4.0",
     "typescript": "^3.0.0",
     "vue-template-compiler": "^2.6.11"
   },
