--- a/packages/lightwindow_main/package.json
+++ b/packages/lightwindow_main/package.json
@@ -5,40 +5,41 @@
   "scripts": {
     "serve": "vite serve",
     "build": "vite build",
-    "preview":"vite preview"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@vue/composition-api": "^1.2.4",
+    "@vue/composition-api": "^1.4.1",
     "axios": "^0.21.4",
-    "core-js": "^3.6.5",
+    "core-js": "^3.19.2",
+    "css-doodle": "^0.22.0",
     "soundfont-player": "^0.12.0",
-    "vue": "^2.6.11",
-    "vue-axios": "^3.3.6",
-    "vue-router": "^3.2.0",
-    "vuetify": "^2.5.8"
+    "vue": "^2.6.14",
+    "vue-axios": "^3.4.0",
+    "vue-router": "^3.5.3",
+    "vuetify": "^2.6.1"
   },
   "devDependencies": {
-    "@mdi/font": "^6.2.95",
-    "@typescript-eslint/eslint-plugin": "^4.32.0",
-    "@typescript-eslint/parser": "^4.32.0",
+    "@mdi/font": "^6.5.95",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
     "@vue/eslint-config-standard": "^5.1.2",
     "@vue/eslint-config-typescript": "^7.0.0",
-    "@vue/runtime-dom": "^3.2.20",
-    "eslint": "^6.7.2",
-    "eslint-plugin-import": "^2.20.2",
+    "@vue/runtime-dom": "^3.2.23",
+    "eslint": "^6.8.0",
+    "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-standard": "^4.1.0",
     "eslint-plugin-vue": "^6.2.2",
-    "sass": "~1.32.0",
-    "sass-loader": "^10.0.0",
-    "typescript": "~4.1.5",
-    "unplugin-vue-components": "^0.16.0",
-    "unplugin-vue2-script-setup": "^0.6.12",
-    "vite": "^2.6.13",
+    "sass": "~1.32.13",
+    "sass-loader": "^10.2.0",
+    "typescript": "~4.1.6",
+    "unplugin-vue-components": "^0.17.2",
+    "unplugin-vue2-script-setup": "^0.7.3",
+    "vite": "^2.6.14",
     "vite-plugin-vue2": "^1.9.0",
-    "vite-plugin-windicss": "^1.4.12",
-    "vue-template-compiler": "^2.6.11",
-    "windicss": "^3.2.0"
+    "vite-plugin-windicss": "^1.5.3",
+    "vue-template-compiler": "^2.6.14",
+    "windicss": "^3.2.1"
   }
 }
