--- a/package.json
+++ b/package.json
@@ -27,16 +27,18 @@
   "homepage": "https://github.com/beicause/lightwindow_webapp#readme",
   "packageManager": "pnpm",
   "devDependencies": {
-    "@types/jest": "^24.9.1",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.17",
     "@vue/test-utils": "^1.3.0",
     "babel-core": "^6.26.3",
     "chalk": "^4.1.2",
-    "jest": "^27.4.3",
+    "jest": "^27.5.1",
     "npm-run-all": "^4.1.5",
-    "serve-static": "^1.14.1",
-    "ts-jest": "^27.0.7",
-    "ts-node": "^10.4.0",
+    "serve-static": "^1.14.2",
+    "ts-jest": "^27.1.3",
+    "ts-node": "^10.5.0",
     "tslib": "^2.3.1",
+    "typescript": "~4.1.6",
     "vue": "^2.6.14",
     "vue-jest": "^3.0.7",
     "vue-template-compiler": "^2.6.14"
